Continue working on 1.17 port